fix additional whitespace after codeblocks error; ADD THIS FIX TO f5-sphinx-theme

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -259,3 +259,9 @@ th, td {
     margin:auto 2px
 }
 
+/*
+/ Remove whitespace after code blocks
+*/
+.literal-block-wrapper:after {
+    content: none;
+}
